# orga

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  service_test_outcome.txt
.github/workflows/: ci.yml
design/: address-quality-notes.org  architecture-overview.org  demo-walkthrough.org  engineering-boundaries.org  known-limitations.org  lightweight-model-augmentation-plan.org  m7_1_acceptance_report.org  problem-family-guidelines.org  result-interpretation.org
docs/: known-issues.org  service-demo.org
examples/: demo_commands.sh  sample_batch_request.json  sample_batch_response.json  sample_output.json  sample_urls.txt
examples/extractor_service/: main.py
examples/fixtures/: batch_urls.txt
examples/job_service/: main.py
orga/: __init__.py
orga/cli/: main.py
orga/discover/: __init__.py
orga/fetch/: __init__.py  httpx_fetcher.py  strategy.py
orga/governance/: __init__.py  classification_aggregator.py
orga/merge/: __init__.py  constants.py  processor.py
orga/model/: __init__.py  config.py  document.py  profile.py  types.py
orga/parse/: taxonomy.py
orga/parse/fields/: __init__.py  address_scorer.py  classifier.py  parsers.py
orga/pipeline/: __init__.py
orga/registry/: __init__.py
scripts/: verify_services_e2e.py  verify_services_internal.py
tests/: conftest.py
tests/examples/: test_extractor_service.py  test_job_service.py
tests/integration/: test_cli.py  test_pipeline.py
tests/module/: test_address_scoring.py  test_classification_advanced.py  test_classification_layers.py  test_classify.py  test_concurrency.py  test_discover.py  test_fetch.py  test_location_consolidation.py  test_output_sanitization.py  test_parse.py  test_parse_address_advanced.py  test_sanitization.py
tests/unit/: test_governance.py  test_merge.py  test_model.py  test_registry.py
