[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orga"
version = "0.1.3"
description = "A modular, strategy-driven organization profile extractor."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "DETONG TECH", email = "DETONG.KEJI@GMAIL.COM" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pydantic>=2.0",
  "selectolax",
  "extruct",
  "phonenumbers",
  "email-validator",
  "rapidfuzz",
  "PyYAML",
  "httpx",
  "tenacity",
  "aiolimiter",
  "hishel",
  "structlog",
  "opentelemetry-api",
  "typer",
]

[project.optional-dependencies]
browser = ["playwright"]
llm = ["langextract"]
server = ["fastapi", "uvicorn"]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "mypy",
  "black",
]

[project.scripts]
orga = "orga.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["orga"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E501", "PLR2004", "F401", "PLC0415", "B904", "E741", "E701", "RUF012", "RUF013", "UP035", "B008", "PLR0912", "F841", "RUF059", "B007", "F821", "PLR0915", "E722", "PLR0913", "PLR1714", "PLW2901", "RUF005"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
asyncio_mode = "auto"
